Changes since last push:
 - Makefile dependencies are now automated.

Known "features":
 - The strenth of gravity is independent of the world.
 - Things that move multiple tiles per second won't collide as if they were moving in a straight line. The best way to solve this may be to not allow anything to move that fast, possibly via multiple updates between renderings.
 - The spawn point sometimes puts the player on top of dirt. Spawning should be changed so it destroys any tiles in the way.
 - You can place dirt on top of creatures, including yourself
 - Tiles have an opacity between 0 and 64, but right now it only matters whether it's zero or not.
 - If carried by a boulder with another boulder right behind you, the top
boulder updates first and traps you.
 - Dirt and mud look very similar, and mud looks identical to humus

Known bugs:
 - Collision detection misses one when falling into a two-wide gap at just the
right angle
 - When the window is bigger than the map, crossing x = 0 causes an assertion
error.
 - The player can't jump when colliding with a wall.
 - All map rendering vanishes when the player goes too high
 - When colliding with the bottom of the map, position is set but velocity isn't


To do:
 - stacking items, throwing / picking up items
 - Trees!
 - save and load the player
 - Make all public Map functions accept any x value
 - remove Map.getForeground() and Map.getBackground()
Still need to do:
Collider, Entity, EventHandler, Hotbar, Inventory, MapHelpers, Movable, Player,
Rect, Sprite, Tile, UIHelpers, WindowHandler, World
 - Change style (/* */ comments instead of // usually, and no repeated comments
in both the .hh and .cc files)
 - Replace NULL with nullptr

