@@ -8,6 +8,7 @@
 
 /* Forward declare. */
 struct Rect;
+class DroppedItem;
 
 /* A Tile that moves. */
 class Boulder: public Tile {
@@ -48,11 +49,13 @@ class Boulder: public Tile {
     static std::set<TileType> vectorConvert(const std::vector<int> &input);
 
     /* Try to fall one tile. Return true on success. */
-    bool fall(Map &map, const Location &place) const;
+    bool fall(Map &map, const Location &place, 
+        std::vector<DroppedItem*> &items) const;
 
     /* Try to move one tile. Return true on success. */
     bool move(Map &map, const Location &place, int direction, 
-            std::vector<movable::Movable*> &movables);
+            std::vector<movable::Movable*> &movables, 
+            std::vector<DroppedItem*> &items);
 
     /* Find which movables are on top and tell them to move. */
     void carryMovables(const Map &map, const Rect &boulderRect, 
@@ -74,6 +77,7 @@ public:
     lists of boulders to try to move. */
     virtual bool update(Map &map, Location place, 
             std::vector<movable::Movable*> &movables, 
+            std::vector<DroppedItem*> &items, 
             int tick);
 
     /* Look at the map and see if it can move, but don't do anything. */
